# alsa-firmware

./: .gitignore  .hgignore  .hgtags  Makefile.am  Makefile.fw_writer  Makefile.hotplug  Makefile.loader  README  configure.ac  configure.in  cvscompile  gitcompile  hgcompile
aica/: Dreamcast_sound.txt  Makefile.am  license.txt
asihpi/: Makefile.am  dsp2400.txt  dsp4100.txt  dsp4300.txt  dsp5000.txt  dsp6200.txt  dsp6205.txt  dsp6413.txt  dsp6600.txt  dsp8713.txt  dsp8900.txt  licence.txt
ca0132/: Makefile.am  README
cs46xx/: Makefile.am  README  ba1  cs46xx-fw.c  cwc4630  cwcasync  cwcbinhack  cwcdma  cwcdma.asp  cwcsnoop
echoaudio/: Makefile.am  fw_writer.c  license.txt
echoaudio/ASIC/: 3G_ASIC.c  Gina24ASIC.c  Gina24ASIC_361.c  Layla24_1ASIC.c  Layla24_2A_ASIC.c  Layla24_2S_ASIC.c  LaylaASIC.c  Mona1ASIC48.c  Mona1ASIC48_361.c  Mona1ASIC96.c  Mona1ASIC96_361.c  Mona2ASIC.c
echoaudio/DSP/: Darla20DSP.c  Darla24DSP.c  Echo3gDSP.c  Gina20DSP.c  Gina24DSP.c  Gina24_361DSP.c  Gina3gDSP.c  IndigoDJDSP.c  IndigoDJxDSP.c  IndigoDSP.c  IndigoIODSP.c  IndigoIOxDSP.c  Layla20DSP.c  Layla24DSP.c  LoaderDSP.c  MiaDSP.c  Mona361DSP.c  MonaDSP.c
emi_26_62/: Makefile.am  emi26-bitstream.ihx  emi26-firmware.ihx  emi26-loader.ihx  emi62-bitstream.ihx  emi62-firmware-midi.ihx  emi62-firmware-spdif.ihx  emi62-loader.ihx  fw_writer.c  license.txt
emu/: Makefile.am  audio_dock_netlist.h  emu0404_netlist.h  emu1010_notebook_netlist.h  emu1010b_netlist.h  fw_writer.c  hana_netlist.h  license.txt  micro_dock_netlist.h
hdsploader/: Makefile.am  README  tobin.c
korg1212/: Makefile.am
m4/: ax_prog_cc_for_build.m4
maestro3/: Makefile.am  fw_writer.c  maestro3.h
mixartloader/: Makefile.am  README
multisound/: Makefile.am
pcxhrloader/: Makefile.am  b321_512.b56  d321_512.d56  pcxhr0.conf  pcxhr1.conf  pcxhr2.conf  pcxhr3.conf  pcxhr4.conf  pcxhr5.conf
sb16/: Makefile.am  fw_writer.c  sb16_csp_codecs.h
usx2yloader/: Makefile.am  README  an2131.asm  tascam_loader.asm  tascam_loader.ihx  us122.conf  us122.rbt  us122fw.ihx  us224.conf  us224.rbt  us224fw.ihx
vxloader/: Makefile.am  README  toxlx.c
wavefront/: Makefile.am  fw_writer.c  yss225.c
ymfpci/: Makefile.am  fw_writer.c  hwmcode.c
