AC_PREREQ(2.53)
AC_INIT(hdsploader/tobin.c)
AM_INIT_AUTOMAKE(alsa-firmware, 1.0.9)
AC_PROG_CC
AC_PROG_INSTALL
AC_HEADER_STDC

echo $VERSION > $srcdir/version

AC_ARG_ENABLE(loader,
  [  --disable-loader        Disable the old ALSA fw loader support],
  [loader="$enableval"],[loader=yes])
AC_ARG_ENABLE(hotplug,
  [  --disable-hotplug       Disable the hotplug fw loader support],
  [hotplug="$enableval"],[hotplug=yes])
AC_ARG_ENABLE(buildfw,
  [  --enable-buildfw        Enable building fw from source files],
  [buildfw="$enableval"],[buildfw=no])

AC_PATH_PROGS(AS31, as31)
AS31_FLAGS="-Fhex"
AC_SUBST(AS31_FLAGS)

if test x"${AS31}" = x"";  then
  buildfw=false
fi

AM_CONDITIONAL(USE_LOADER, test "$loader" = "yes")
AM_CONDITIONAL(USE_HOTPLUG, test "$hotplug" = "yes")
AM_CONDITIONAL(BUILD_FW, test "$buildfw" = "yes")

AC_ARG_WITH(hotplug-dir,
  [  --with-hotplug-dir      Specify the hotplug firmware directory],
  [hotplugfwdir="$withval"],
  [hotplugfwdir="/usr/lib/hotplug/firmware"])
HOTPLUGFWDIR="$hotplugfwdir"
AC_SUBST(HOTPLUGFWDIR)
    

AC_OUTPUT(Makefile \
	  hdsploader/Makefile \
	  mixartloader/Makefile \
	  usx2yloader/Makefile \
	  vxloader/Makefile \
	  pcxhrloader/Makefile \
	  echoaudio/Makefile)
