MYNAME = usx2yloader

cfg_files = 	us122.conf us224.conf us428.conf \
		us122.prepad us224.prepad us428.prepad \
		us122.rbt us224.rbt us428.rbt \
		tascam_loader.ihx \
		us122fw.ihx us224fw.ihx us428fw.ihx

EXTRA_DIST = $(cfg_files)

firmwaredir = $(datadir)/alsa/firmware/$(MYNAME)
firmware_DATA = $(cfg_files)

